--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "bugs": "http://issues.fluidproject.org/browse/FLUID",
     "homepage": "http://www.fluidproject.org/",
     "dependencies": {
-        "infusion": "2.0.0-dev.20161124T191742Z.17a345b",
+        "infusion": "amb26/infusion#FLUID-6091",
         "chartAuthoring": "amb26/chartAuthoring#FLOE-484"
     },
     "license": "(BSD-3-Clause OR ECL-2.0)",
