First version of Visible Nexus fully working from npm dependencies, featuring some keyboard a11y, basic ARIA labels and a simple README.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-    "extends": "eslint-config-fluid"
+    "extends": "eslint-config-fluid",
+    "globals": {
+        "fluid_3_0_0": true
+    }
 }
