GPII-2305: Update Nexus dependency to simonbates#GPII-2177

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "infusion": "3.0.0-dev.20170221T200310Z.095ff9f",
         "kettle": "1.4.0",
         "chartAuthoring": "amb26/chartAuthoring#FLOE-484",
-        "gpii-nexus": "0.1.0"
+        "gpii-nexus": "simonbates/nexus#GPII-2177"
     },
     "license": "(BSD-3-Clause OR ECL-2.0)",
     "keywords": [
