GPII-2305: Use Nexus with co-occurrence engine

--- a/src/server/configs/fluid.visible.nexus.config.json
+++ b/src/server/configs/fluid.visible.nexus.config.json
@@ -1,22 +1,11 @@
 {
     "type": "fluid.visible.nexus.config",
     "options": {
-        "serverPort": 9081,
         "components": {
             "server": {
                 "type": "kettle.server",
                 "options": {
-                    "gradeNames": "kettle.server.ws",
-                    "port": "{kettle.config}.options.serverPort",
                     "components": {
-                        "nexus": {
-                            "type": "gpii.nexus",
-                            "options": {
-                                "components": {
-                                    "nexusComponentRoot": "@expand:fluid.componentForPath(globalNexusComponentRoot)"
-                                }
-                            }
-                        },
                         "authoring": {
                             "type": "fluid.authoring.nexus.app"
                         }
@@ -24,5 +13,6 @@
                 }
             }
         }
-    }
+    },
+    "mergeConfigs": "%gpii-co-occurrence-engine/configs/gpii.nexusWithCoOccurrenceEngine.config.json"
 }
