--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dependencies": {
         "infusion": "3.0.0-dev.20170221T200310Z.095ff9f",
         "kettle": "1.4.0",
-        "gpii-nexus": "simonbates/nexus#GPII-2177"
+        "gpii-co-occurrence-engine": "simonbates/co-occurrence-engine"
     },
     "license": "(BSD-3-Clause OR ECL-2.0)",
     "keywords": [
