GPII-2305: Make Nexus component root visible

--- a/src/server/configs/fluid.visible.nexus.config.json
+++ b/src/server/configs/fluid.visible.nexus.config.json
@@ -12,6 +12,12 @@
                     }
                 }
             }
+        },
+        "distributeOptions": {
+            "fluid.visible.nexus.globalComponentRoot": {
+                "record": "@expand:fluid.componentForPath(globalNexusComponentRoot)",
+                "target": "{that gpii.nexus}.options.components.nexusComponentRoot"
+            }
         }
     },
     "mergeConfigs": "%gpii-co-occurrence-engine/configs/gpii.nexusWithCoOccurrenceEngine.config.json"
