GPII-2880: Add "Load Configuration" to Visible Nexus

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dependencies": {
         "infusion": "3.0.0-dev.20170221T200310Z.095ff9f",
         "kettle": "1.4.0",
-        "gpii-nexus": "0.2.0"
+        "gpii-nexus": "0.2.0",
+        "gpii-nexus-client": "simonbates/nexus-client#GPII-2882"
     },
     "license": "(BSD-3-Clause OR ECL-2.0)",
     "keywords": [
